--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "knex": "^0.21.8",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.16",
-    "pg": "^8.4.2"
+    "pg": "^8.4.2",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
